assets/css/style.css
/* font family */
@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Barlow:wght@300&family=Patrick+Hand&family=Quicksand:wght@700&family=Source+Sans+3:wght@300&display=swap');

* {
    margin: 0;
}

body {
    font-family: 'Barlow', sans-serif;
    background-color: #EFE1D1;
}

/* headings, paragraph */

h1,
h2,
h3 {
    font-family: 'Quicksand', sans-serif;
    color: #331D2C;
}

p {
    font-family: 'Barlow', sans-serif;
}

hr {
    border-top: 1px solid #331D2C;
    width: 70%;
    margin: 5px 0;
}

/*-------------------------------------------------------------------  head section */

.logo {
    width: 75px;
    height: auto;
    float: left;
}


/*-------------------------------------------------------------------  navigation links */
.navigation {
    background-color: #331D2C;
    position: fixed;
    overflow: hidden;
    width: 100%;
    top: 0;
}

.navigation li {
    display: inline-block;
}

.navigation li a {
    color: #EDC9D2;
    text-decoration: none;
    text-align: center;
    font-size: 20px;
    padding: 22px 16px;
    display: inline-block;
    float: right;
    /* letter-spacing: 2px; */
}

.navigation ul {
    text-align: right;
}

.navigation a:hover {
    color: #331D2C;
    background-color: #EDC9D2;
}

/*-------------------------------------------------------------------  section home */
#main {
    height: auto;
    /* padding: 1rem; */
    /* margin-bottom: 40px; */
    padding: 16px;
    margin-top: 60px;
}

#profile-img {
    width: auto;
    height: 600px;
    opacity: .7;
    float: left;
}

/* #welcome {
    padding-left: 450px;
    padding-top: 150px;
} */

#welcome p {
    font-family: 'Patrick Hand',
        'Courier New';
    color: #A78295;
    text-align: center;
    font-size: xx-large;
    letter-spacing: 2px;
    /* margin: 0;
    padding: 0;
    border: none; */
}

/* #main #welcome {
    float: left;
} */

/*-------------------------------------------------------------------  section experience */
#experience {
    padding: 1rem;
    margin-bottom: 40px;
    background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
}

#experience h1 {
    text-transform: uppercase;
    letter-spacing: 6px;
    text-align: center;
    font-size: xx-large;
    padding-bottom: 20px;
}

.inside {
    word-wrap: break-word;
    padding-left: 40px;
}

.inner-box {
    width: 90%;
    margin: 1rem 0;
    /* display: inline-block; */
    padding-left: 30px;
    padding-right: 20px;
    padding-bottom: 10px;
}

#experience1 {
    background-color: #EDC9D2;
    margin: auto;
    width: 90%;
    padding: 10px;
}

#experience2 {
    background-color: #C2848C;
    margin: auto;
    width: 90%;
    padding: 10px;
}

#experience3 {
    background-color: #EDC9D2;
    margin: auto;
    width: 90%;
    padding: 10px;
}

section {
    clear: both;
}

/*-------------------------------------------------------------------  education section */
#education {
    padding: 1rem;
    margin-bottom: 40px;
    display: grid;
    place-items: center;
}

#education h1 {
    text-transform: uppercase;
    letter-spacing: 6px;
    text-align: center;
    font-size: xx-large;
    padding-top: 10px;
    padding-bottom: 30px;
}

.education-box {
    width: 600px;
    border: 3px solid #DE3163;
    box-shadow: 9px 6px 4px #5B2C6F;
    padding: 7px 11px;
    background-image: linear-gradient(150deg, #EAFAF1, #E8DAEF 30%, #E5E8E8);
    margin: 10px;
    display: inline-block;
    list-style: none;
}

ul strong {
    font-size: large;
}

.education-box li {
    list-style-type: none;
    text-align: center;
}



/*-------------------------------------------------------------------  skills section */
#skills {
    padding: 1rem;
    margin-bottom: 40px;
    background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
}

#skills h1 {
    text-transform: uppercase;
    letter-spacing: 6px;
    text-align: center;
    font-size: xx-large;
    padding-top: 30px;
    padding-bottom: 20px;
}

#skills h2 {
    letter-spacing: 4px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 5px;
}

.language ul {
    list-style-type: none;
    padding-left: 20px;
}

.expertise {
    background: rgba(194, 132, 140, .6);
    width: 100%;
    padding: 5px;
    text-align: center;
}

.skill-box {
    border-radius: 25px;
    background: #9A6C81;
    padding: 5px;
    width: 210px;
    height: 65px;
    text-align: center;
    display: inline-block;
    box-sizing: border-box;
    vertical-align: middle;
}

/* tech and human language */
/* Create two equal columns that floats next to each other */
.column {
    float: left;
    width: 50%;
    padding: 10px;
    box-sizing: border-box;
}

/* Clear floats after the columns */
.language:after {
    content: "";
    display: table;
    clear: both;
}

.human-language {
    background-color: #C2848C;
}

.tools {
    background-color: #C2848C;
}

/*tool grid*/
.grid-container {
    display: grid;
    grid-template-columns: auto auto auto auto;
    grid-gap: 2px;
    background-color: #C2848C;
    padding: 1px;
}

.grid-container>div {
    background-color: rgba(194, 132, 140, .6);
    text-align: center;
    padding: 5px 0;
    font-size: 20px;
}

.human-language-tools-box {
    margin-top: 20px;
    background: rgba(194, 132, 140, .6);
    /* padding: 20px; */
    width: 100%;
    text-align: left;
    display: block;
    padding: 5px;
}

/* computer skills*/
.tech-languages {
    margin-top: 20px;
    background: rgba(194, 132, 140, .6);
    /* padding: 20px; */
    width: 100%;
    text-align: left;
    display: block;
    padding: 5px;
}

.wrapper {
    width: 500px;
}

.progress-bar {
    width: 100%;
    background-color: #EDC9D2;
    padding: 3px;
    border-radius: 3px;
    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
}

.progress-bar-fill {
    display: block;
    height: 22px;
    background-color: #3F2E3E;
    border-radius: 3px;

    transition: width 500ms ease-in-out;
}

.progress-bar span {
    color: #EDC9D2;
}


/*-------------------------------------------------------------------  contact me section */
#contact {
    padding: 1rem;
    margin-bottom: 40px;

    clear: left;
    background-color: #AC8499;
    background-size: cover;
    background-position: center;
    height: 600px;
    /* margin-bottom: 5%; */
    box-sizing: border-box;
}

#contact h1 {
    text-transform: uppercase;
    letter-spacing: 6px;
    text-align: center;
    font-size: xx-large;
    padding-top: 30px;
    padding-bottom: 20px;
}

.contact-me {
    display: flex;
}

/* Create two equal columns that sits next to each other */
.contact-column {
    flex: 50%;
    padding: 10px;
    height: auto;
}

.contact-form {
    color: #EDC9D2;
    background-color: #331D2C;
    opacity: .5;
    width: 400px;
    position: absolute;
    padding: 10px;
}

#fname,
#lname,
#email {
    width: 100%;
}

.send-button {
    display: block;
}

.send-button:hover {
    background-color: #EDC9D2;
    color: #3F2E3E;
}

input[type=submit] {
    margin-top: 20px;
    margin-left: 0.75rem;
    padding: 0.75rem;
    font-size: 100%;
    background-color: #3F2E3E;
    color: #EDC9D2;
    border: none;
    border-radius: 5px;
    border-color: #331D2C;
}

input[type=reset] {
    margin-top: 20px;
    margin-left: 0.75rem;
    padding: 0.75rem;
    background-color: #EDC9D2;
    color: #3F2E3E;
    border: 1px solid #3F2E3E;
    border-radius: 5px;
    font-size: 100%;
    font-weight: bold;
}

#profile-image {
    max-width: 30px;
    height: auto;
}

.social-networks {
    text-align: left;
}

.social-networks>li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    /* margin: 1%; */
    padding: 1%;
    color: #3F2E3E;
}

/*-------------------------------------------------------------------  footer */
footer {
    background-color: #3F2E3E;
    padding: 1em;
    text-align: center;
    width: 100%;
    bottom: 0;
    right: 0;
    z-index: 3;
    clear: both;
    overflow: auto;
}

footer>p {
    color: #A78295;
}

.text-uppercase {
    text-transform: uppercase;
}

